# temppura

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
source/: alias.h  compiler.cpp  compiler.h  configuration.h  fileutils.h  flag.h  lexicon.h  main.cpp  strutils.h  tokenizer.h  utils.h
source/test/testdp/: .temppura-cache.cfg
source/test/testdp/src/: pack.mcmeta  temppura.cfg
source/test/testdp/src/data/minecraft/tags/function/: load.json  tick.json
source/test/testdp/src/data/testdp/function/: onload.ppura  onload.tgt  ontick.ppura  ontick.tgt
